Add contacts subresource to customer API
